manifests/prod/go-template/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-template-deploy
  namespace: ip812
  labels:
    app: go-template
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-template
  template:
    metadata:
      labels:
        app: go-template
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: go-template
          image: 678468774710.dkr.ecr.eu-central-1.amazonaws.com/ip812/go-template:1.0.0
          ports:
            - containerPort: 8080
              protocol: TCP
