manifests/prod/go-template/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: go-template-svc
  namespace: ip812
spec:
  type: ClusterIP
  selector:
    app: go-template
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
